--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-spring.application.name=TaskManagementSystem
-server.port = 8080
-#DataSource properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto= create
-spring.jpa.properties.hibernate.show-sql=true
-spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/TaskManager
-spring.datasource.username= root
-spring.datasource.password= Tejveer@96
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/taskmanager
+spring.datasource.username=${MYSQL__ROOT_USER:root}
+spring.datasource.password=${MYSQL_ROOT_PASSWORD:Tejveer@96}
+
+
+
